pagina casi terminada1

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
               <img class='icono' src="/images/icons/close.svg" id="close-menu"/>
             </div>
 
-            <div class="menu-item">
+            <div class="menu-item" id="botonInicio">
               <a href="#">Inicio</a>
             </div>
-            <div class="menu-item">
+            <div class="menu-item" id="botonMenu">
               <a href="#link-menu">Menu</a>
             </div>
             <div class="menu-item">
-              <a href="#ubicaciones">Ubicaciones</a>
+              <a href="#ubicaciones" id="botonUbicaciones">Ubicaciones</a>
             </div>
-            <div class="menu-item">
+            <div class="menu-item" id="botonHorarios">
               <a href="#horarios">Horarios</a>
             </div>
-            <div class="menu-item" id="reservas">
+            <div class="menu-item" id="botonReservas">
               <a href="#link-reservas">Reservas</a>
             </div>
 
-            <div class="menu-item" id="ordenar">
+            <div class="menu-item" id="BotonOrdenar">
               <a href="#">Ordena Ahora</a>
             </div>
           </div>
